--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,4 +11,11 @@
   <version>1.3</version>
   <name>core</name>
   <url>http://maven.apache.org</url>
+  <dependencies>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+  </dependencies>
 </project>
