--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>za.net.hanro50</groupId>
     <artifactId>util</artifactId>
-    <version>1.3</version>
+    <version>${project.version}</version>
   </parent>
   <groupId>za.net.hanro50.util</groupId>
   <artifactId>core</artifactId>
-  <version>1.3</version>
+  <version>${project.version}</version>
   <name>core</name>
   <url>http://maven.apache.org</url>
   <dependencies>
