--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>za.net.hanro50</groupId>
   <artifactId>util</artifactId>
-  <version>1.4</version>
+  <version>${project.version}</version>
   <name>util</name>
   <packaging>pom</packaging>
   <!-- FIXME change it to the project's website -->
@@ -12,6 +12,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <project.version>1.4</project.version>
   </properties>
   <dependencies>
     <dependency>
