--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -34,7 +34,7 @@
     <dependency>
       <groupId>za.net.hanro50.util</groupId>
       <artifactId>core</artifactId>
-      <version>1.3</version>
+      <version>${project.version}</version>
       <exclusions>
         <exclusion>
           <groupId>com.google.code.gson</groupId>
