--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>za.net.hanro50</groupId>
   <artifactId>util</artifactId>
-  <version>${project.version}</version>
+  <version>${revision}</version>
   <name>util</name>
   <packaging>pom</packaging>
   <!-- FIXME change it to the project's website -->
@@ -12,14 +12,14 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <project.version>1.5.1</project.version>
+    <revision>1.6</revision>
   </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>[4.13.1,)</version>
-      <scope>Test</scope>
+      <scope>test</scope>
     </dependency>
    
   </dependencies>
