--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -17,6 +17,10 @@
       <id>spigot-repo</id>
       <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
     </repository>
+    <repository>
+      <id>bungeecord-repo</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </repository>
   </repositories>
   <dependencies>
     <dependency>
@@ -42,8 +46,28 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>net.md-5</groupId>
+      <artifactId>bungeecord-api</artifactId>
+      <version>1.16-R0.5-SNAPSHOT</version>
+      <type>jar</type>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.md-5</groupId>
+      <artifactId>bungeecord-api</artifactId>
+      <version>1.16-R0.5-SNAPSHOT</version>
+      <type>javadoc</type>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
 
@@ -58,23 +82,23 @@
             </goals>
           </execution>
         </executions>
-        
+
         <configuration>
           <finalName>Hanlib-${project.version}</finalName>
           <filters>
-              <filter>
-                  <artifact>*:*</artifact>
-                  <excludes>
-                      <exclude>META-INF/*</exclude>
-                  </excludes>
-              </filter>
+            <filter>
+              <artifact>*:*</artifact>
+              <excludes>
+                <exclude>META-INF/*</exclude>
+              </excludes>
+            </filter>
           </filters>
           <artifactSet>
-              <excludes>
-                  <exclude>com.google.code.*</exclude>
-              </excludes>
+            <excludes>
+              <exclude>com.google.code.*</exclude>
+            </excludes>
           </artifactSet>
-      </configuration>
+        </configuration>
       </plugin>
     </plugins>
   </build>
