Bug fixes with versioning...again

--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: HanLib
 main: za.net.hanro50.util.Spigot
-version: ${revision}
+version: ${project.version}
 api-version: 1.14
 load: STARTUP
 author: Hanro50
