--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>za.net.hanro50</groupId>
     <artifactId>util</artifactId>
-    <version>${revision}</version>
+    <version>1.6.1</version>
   </parent>
   <groupId>za.net.hanro50.util</groupId>
   <artifactId>core</artifactId>
